--- a/kubernetes/shared/repos/helm/grafana.yaml
+++ b/kubernetes/shared/repos/helm/grafana.yaml
@@ -6,5 +6,6 @@ metadata:
   name: grafana
   namespace: flux-system
 spec:
-  interval: 1h
-  url: https://grafana.github.io/helm-charts
+  type: oci
+  interval: 30m
+  url: oci://ghcr.io/grafana/helm-charts
