--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,6 +8,7 @@ shopt: [globstar]
 vars:
   CLUSTER: '{{.CLUSTER | default "main"}}'
   CLUSTER_DIR: '{{.ROOT_DIR}}/kubernetes/{{.CLUSTER}}'
+  BOOTSTRAP_DIR: '{{.CLUSTER_DIR}}/bootstrap'
 
 env:
   KUBECONFIG: '{{.CLUSTER_DIR}}/kubeconfig'
