--- a/kubernetes/shared/templates/volsync/minio.yaml
+++ b/kubernetes/shared/templates/volsync/minio.yaml
@@ -33,17 +33,17 @@ spec:
   restic:
     repository: "${APP}-volsync"
     copyMethod: Snapshot
-    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-placeholder}"
-    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-placeholder}"
-    cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
-    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-10Gi}"
-    storageClassName: "${VOLSYNC_STORAGECLASS:-placeholder}"
-    accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
-    capacity: "${VOLSYNC_CAPACITY:-2Gi}"
+    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:=placeholder}"
+    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:=placeholder}"
+    cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:=ReadWriteOnce}"]
+    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:=10Gi}"
+    storageClassName: "${VOLSYNC_STORAGECLASS:=placeholder}"
+    accessModes: ["${VOLSYNC_ACCESSMODES:=ReadWriteOnce}"]
+    capacity: "${VOLSYNC_CAPACITY:=2Gi}"
     moverSecurityContext:
-      runAsUser: ${VOLSYNC_PUID:-1000}
-      runAsGroup: ${VOLSYNC_PGID:-100}
-      fsGroup: ${VOLSYNC_PGID:-100}
+      runAsUser: ${VOLSYNC_PUID:=1000}
+      runAsGroup: ${VOLSYNC_PGID:=100}
+      fsGroup: ${VOLSYNC_PGID:=100}
     enableFileDeletion: true
     cleanupCachePVC: true
     cleanupTempPVC: true
@@ -54,23 +54,23 @@ kind: ReplicationSource
 metadata:
   name: "${APP}"
 spec:
-  sourcePVC: "${CLAIM:-${APP}}"
+  sourcePVC: "${CLAIM:=${APP}}"
   trigger:
     schedule: "0 * * * *"
   restic:
-    copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
+    copyMethod: "${VOLSYNC_COPYMETHOD:=Snapshot}"
     pruneIntervalDays: 10
     repository: "${APP}-volsync"
-    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-placeholder}"
-    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-10Gi}"
-    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-placeholder}"
-    cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
-    storageClassName: "${VOLSYNC_STORAGECLASS:-placeholder}"
-    accessModes: ["${VOLSYNC_SNAP_ACCESSMODES:-ReadWriteOnce}"] # Use ReadOnlyMany for CephFS
+    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:=placeholder}"
+    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:=10Gi}"
+    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:=placeholder}"
+    cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:=ReadWriteOnce}"]
+    storageClassName: "${VOLSYNC_STORAGECLASS:=placeholder}"
+    accessModes: ["${VOLSYNC_SNAP_ACCESSMODES:=ReadWriteOnce}"] # Use ReadOnlyMany for CephFS
     moverSecurityContext:
-      runAsUser: ${VOLSYNC_PUID:-1000}
-      runAsGroup: ${VOLSYNC_PGID:-100}
-      fsGroup: ${VOLSYNC_PGID:-100}
+      runAsUser: ${VOLSYNC_PUID:=1000}
+      runAsGroup: ${VOLSYNC_PGID:=100}
+      fsGroup: ${VOLSYNC_PGID:=100}
     retain:
       hourly: 24
       daily: 10
