--- a/kubernetes/shared/templates/volsync/r2.yaml
+++ b/kubernetes/shared/templates/volsync/r2.yaml
@@ -28,22 +28,22 @@ kind: ReplicationSource
 metadata:
   name: "${APP}-r2"
 spec:
-  sourcePVC: "${CLAIM:-${APP}}"
+  sourcePVC: "${CLAIM:=${APP}}"
   trigger:
     schedule: "0 0 * * *"
   restic:
-    copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
+    copyMethod: "${VOLSYNC_COPYMETHOD:=Snapshot}"
     pruneIntervalDays: 7
     repository: "${APP}-volsync-r2"
-    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-placeholder}"
-    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-10Gi}"
-    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-placeholder}"
-    cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
-    storageClassName: "${VOLSYNC_STORAGECLASS:-placeholder}"
-    accessModes: ["${VOLSYNC_SNAP_ACCESSMODES:-ReadWriteOnce}"] # Use ReadOnlyMany for CephFS
+    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:=placeholder}"
+    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:=10Gi}"
+    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:=placeholder}"
+    cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:=ReadWriteOnce}"]
+    storageClassName: "${VOLSYNC_STORAGECLASS:=placeholder}"
+    accessModes: ["${VOLSYNC_SNAP_ACCESSMODES:=ReadWriteOnce}"] # Use ReadOnlyMany for CephFS
     moverSecurityContext:
-      runAsUser: ${VOLSYNC_PUID:-1000}
-      runAsGroup: ${VOLSYNC_PGID:-100}
-      fsGroup: ${VOLSYNC_PGID:-100}
+      runAsUser: ${VOLSYNC_PUID:=1000}
+      runAsGroup: ${VOLSYNC_PGID:=100}
+      fsGroup: ${VOLSYNC_PGID:=100}
     retain:
       daily: 7
