--- a/.github/workflows/flux-diff.yaml
+++ b/.github/workflows/flux-diff.yaml
@@ -83,8 +83,8 @@ jobs:
           args: >-
             diff ${{ matrix.resources }}
             --unified 6
-            --path /github/workspace/pull/kubernetes/main/flux/config
-            --path-orig /github/workspace/default/kubernetes/main/flux/config
+            --path /github/workspace/pull/${{ matrix.paths }}/flux/config
+            --path-orig /github/workspace/default/${{ matrix.paths }}/flux/config
             --strip-attrs "helm.sh/chart,checksum/config,app.kubernetes.io/version,chart"
             --limit-bytes 10000
             --all-namespaces
