feat: turn cluster-settings into a component

--- a/kubernetes/main/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/main/apps/actions-runner-system/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   # Flux-Kustomizations
   - ./actions-runner-controller/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
