--- a/kubernetes/main/apps/database/kustomization.yaml
+++ b/kubernetes/main/apps/database/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./crunchy-postgres/ks.yaml
   - ./dragonfly/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
