--- a/kubernetes/main/apps/flux-system/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./flux-operator/ks.yaml
   - ./weave-gitops/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
