--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   # - ./palworld/ks.yaml
   - ./vrising/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
