--- a/kubernetes/main/apps/network/kustomization.yaml
+++ b/kubernetes/main/apps/network/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./external/ks.yaml
   - ./internal/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
