--- a/kubernetes/main/apps/storage/kustomization.yaml
+++ b/kubernetes/main/apps/storage/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
