--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./reloader/ks.yaml
   - ./system-upgrade-controller/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
