--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./rss-forwarder/ks.yaml
   - ./thelounge/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
