--- a/kubernetes/main/apps/cert-manager/kustomization.yaml
+++ b/kubernetes/main/apps/cert-manager/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   # Flux-Kustomizations
   - ./cert-manager/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
