--- a/kubernetes/main/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/main/apps/kube-tools/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ./spegel/ks.yaml
   - ./system-upgrade-controller/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
