--- a/kubernetes/main/apps/rook-ceph/kustomization.yaml
+++ b/kubernetes/main/apps/rook-ceph/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   # Flux-Kustomizations
   - ./rook-ceph/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
