--- a/kubernetes/utility/apps/kube-system/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-system/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./coredns/ks.yaml
   - ./metrics-server/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
