--- a/kubernetes/utility/apps/observability/kustomization.yaml
+++ b/kubernetes/utility/apps/observability/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./network-ups-tools/ks.yaml
   - ./smartctl-exporter/ks.yaml
 components:
+  - ../../flux/components
   - ../../../shared/components/alerts
 transformers:
   - |-
