feat(kustomize-mutating-webhook): Deploy

--- a/kubernetes/shared/repos/helm/kustomization.yaml
+++ b/kubernetes/shared/repos/helm/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ./external-dns.yaml
   - ./external-secrets.yaml
   - ./fluxcd-community.yaml
+  - ./fluxcd-kustomize-mutating-webhook.yaml
   - ./grafana.yaml
   - ./ingress-nginx.yaml
   - ./intel.yaml
