--- a/kubernetes/utility/apps/flux-system/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   # Flux-Kustomizations
   - ./capacitor/ks.yaml
   - ./flux-operator/ks.yaml
+  - ./kustomize-mutating-webhook/ks.yaml
   - ./tofu-controller/ks.yaml
   - ./weave-gitops/ks.yaml
 components:
