feat: scale down

--- a/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
@@ -24,6 +24,7 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    replicaCount: 1
     certManager:
       enabled: true
     configMaps:
