feat: update to new path

--- a/kubernetes/main/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/main/apps/external-secrets/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./external-secrets/ks.yaml
   - ./onepassword/ks.yaml
 components:
-  - ../../flux/components
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
