--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   - ./wizarr/ks.yaml
   - ./your-spotify/ks.yaml
 components:
-  - ../../flux/components
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
