--- a/kubernetes/main/apps/security/kustomization.yaml
+++ b/kubernetes/main/apps/security/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   # Flux-Kustomizations
   - ./authentik/ks.yaml
 components:
-  - ../../flux/components
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
