--- a/kubernetes/main/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/main/apps/self-hosted/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - ./paperless/ks.yaml
   - ./redlib/ks.yaml
 components:
-  - ../../flux/components
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
