--- a/kubernetes/main/apps/storage/kustomization.yaml
+++ b/kubernetes/main/apps/storage/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
 components:
-  - ../../flux/components
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
