--- a/kubernetes/main/apps/database/kustomization.yaml
+++ b/kubernetes/main/apps/database/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./crunchy-postgres/ks.yaml
   - ./dragonfly/ks.yaml
 components:
-  - ../../flux/components
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
