--- a/kubernetes/utility/apps/storage/kustomization.yaml
+++ b/kubernetes/utility/apps/storage/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
 components:
-  - ../../flux/components
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
