feat: turn cluster-settings into a component (#3571)
* feat: turn cluster-settings into a component

* feat: update to new path

* feat: remove cluster-settings

* fix: ha

--- a/kubernetes/main/apps/database/kustomization.yaml
+++ b/kubernetes/main/apps/database/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./crunchy-postgres/ks.yaml
   - ./dragonfly/ks.yaml
 components:
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
