--- a/kubernetes/utility/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/utility/apps/external-secrets/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./external-secrets/ks.yaml
   - ./onepassword/ks.yaml
 components:
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
