--- a/kubernetes/utility/apps/flux-system/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./tofu-controller/ks.yaml
   - ./weave-gitops/ks.yaml
 components:
+  - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
