fix: swap to webhook

--- a/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
@@ -31,5 +31,9 @@ spec:
       - create: true
         name: cluster-settings
         data:
-          CLUSTER_NAME: main
+          CLUSTER: utility
+          PVC_VOLSYNC_STORAGECLASS: local-hostpath
+          VOLSYNC_SNAPSHOTCLASS: csi-local-hostpath
+          VOLSYNC_CACHE_SNAPSHOTCLASS: local-hostpath
+          VOLSYNC_STORAGECLASS: local-hostpath
     secrets: []
