--- a/kubernetes/main/apps/flux-system/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - ./kustomize-mutating-webhook/ks.yaml
   - ./weave-gitops/ks.yaml
 components:
-  - ../../flux/settings
+  # - ../../flux/settings
   - ../../../shared/components/alerts
 transformers:
   - |-
