--- a/kubernetes/main/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
+++ b/kubernetes/main/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
@@ -30,5 +30,9 @@ spec:
       - create: true
         name: cluster-settings
         data:
-          CLUSTER_NAME: main
+          CLUSTER: main
+          PVC_VOLSYNC_STORAGECLASS: ceph-block
+          VOLSYNC_SNAPSHOTCLASS: csi-ceph-blockpool
+          VOLSYNC_CACHE_SNAPSHOTCLASS: ceph-block
+          VOLSYNC_STORAGECLASS: ceph-block
     secrets: []
