--- a/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app/helmrelease.yaml
@@ -37,3 +37,5 @@ spec:
           VOLSYNC_CACHE_SNAPSHOTCLASS: local-hostpath
           VOLSYNC_STORAGECLASS: local-hostpath
     secrets: []
+    podDisruptionBudget:
+      enabled: false #single node cluster
