fix: update taskfile

--- a/.github/workflows/kustomization-sync.yaml
+++ b/.github/workflows/kustomization-sync.yaml
@@ -61,5 +61,5 @@ jobs:
           flux \
               --context ${{ matrix.cluster }} \
               --namespace flux-system \
-              reconcile ks cluster-apps cluster-repos cluster-settings cluster-shared \
+              reconcile ks cluster-apps cluster-repos cluster-shared \
               --with-source
