--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -68,7 +68,7 @@ tasks:
 
   reconcile:
     desc: Force update Flux to pull in changes from your Git repository
-    cmd: flux reconcile -n flux-system kustomization cluster-apps cluster-repos cluster-settings cluster-shared --with-source
+    cmd: flux reconcile -n flux-system kustomization cluster-apps cluster-repos cluster-shared --with-source
     requires:
       vars: [CLUSTER]
 
