fix: add dependencies

--- a/kubernetes/main/apps/actions-runner-system/actions-runner-controller/ks.yaml
+++ b/kubernetes/main/apps/actions-runner-system/actions-runner-controller/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/actions-runner-system/actions-runner-controller/app
   prune: false # revert to true
