--- a/kubernetes/main/apps/database/dragonfly/ks.yaml
+++ b/kubernetes/main/apps/database/dragonfly/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/database/dragonfly/app
   prune: false # revert to true
@@ -32,6 +33,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: dragonfly-operator
+      namespace: database
   interval: 30m
   path: ./kubernetes/main/apps/database/dragonfly/cluster
   prune: false # revert to true
