--- a/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
@@ -13,6 +13,7 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/downloads/qbittorrent/app
   postBuild:
@@ -38,6 +39,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: qbittorrent
+      namespace: downloads
   interval: 30m
   path: ./kubernetes/main/apps/downloads/qbittorrent/tools
   prune: false # revert to true
