--- a/kubernetes/main/apps/downloads/readarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/readarr/ks.yaml
@@ -12,8 +12,11 @@ spec:
     - ../../../../../shared/components/gatus/guarded
   dependsOn:
     - name: crunchy-postgres-cluster
+      namespace: database
     - name: crunchy-postgres-stores
+      namespace: database
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/downloads/readarr/app
   postBuild:
