--- a/kubernetes/main/apps/downloads/sabnzbd/ks.yaml
+++ b/kubernetes/main/apps/downloads/sabnzbd/ks.yaml
@@ -13,6 +13,7 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
   interval: 30m
   path: ./kubernetes/main/apps/downloads/sabnzbd/app
