--- a/kubernetes/main/apps/flux-system/weave-gitops/ks.yaml
+++ b/kubernetes/main/apps/flux-system/weave-gitops/ks.yaml
@@ -10,7 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: authentik
+      namespace: security
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/flux-system/weave-gitops/app
   prune: false # revert to true
