--- a/kubernetes/main/apps/games/minecraft/ks.yaml
+++ b/kubernetes/main/apps/games/minecraft/ks.yaml
@@ -34,6 +34,7 @@ spec:
 #    - ../../../../../shared/components/volsync
 #   dependsOn:
 #     - name: onepassword-store
+#       namespace: external-secrets
 #   interval: 30m
 #   path: ./kubernetes/main/apps/games/minecraft/create
 #   postBuild:
@@ -64,6 +65,7 @@ spec:
 #    - ../../../../../shared/components/volsync
 #   dependsOn:
 #     - name: onepassword-store
+#       namespace: external-secrets
 #   interval: 30m
 #   path: ./kubernetes/main/apps/games/minecraft/takocraft
 #   postBuild:
@@ -94,6 +96,7 @@ spec:
 #    - ../../../../../shared/components/volsync
 #   dependsOn:
 #     - name: onepassword-store
+#       namespace: external-secrets
 #   interval: 30m
 #   path: ./kubernetes/main/apps/games/minecraft/vibecraft
 #   postBuild:
