--- a/kubernetes/main/apps/media/maintainerr/ks.yaml
+++ b/kubernetes/main/apps/media/maintainerr/ks.yaml
@@ -13,6 +13,7 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/media/maintainerr/app
   postBuild:
