--- a/kubernetes/main/apps/media/wizarr/ks.yaml
+++ b/kubernetes/main/apps/media/wizarr/ks.yaml
@@ -13,8 +13,11 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: plex
+      namespace: media
     - name: jellyseerr
+      namespace: media
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/media/wizarr/app
   postBuild:
