--- a/kubernetes/main/apps/self-hosted/atuin/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/atuin/ks.yaml
@@ -13,8 +13,11 @@ spec:
   interval: 30m
   dependsOn:
     - name: crunchy-postgres-cluster
+      namespace: database
     - name: crunchy-postgres-stores
+      namespace: database
     - name: onepassword-store
+      namespace: external-secrets
   path: ./kubernetes/main/apps/self-hosted/atuin/app
   postBuild:
     substitute:
