--- a/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/ks.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager
+      namespace: cert-manager
   interval: 30m
   path: ./kubernetes/utility/apps/flux-system/kustomize-mutating-webhook/app
   prune: false # revert to true
