--- a/kubernetes/utility/apps/home-automation/home-assistant/ks.yaml
+++ b/kubernetes/utility/apps/home-automation/home-assistant/ks.yaml
@@ -13,6 +13,7 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/utility/apps/home-automation/home-assistant/app
   postBuild:
