--- a/kubernetes/utility/apps/home-automation/mosquitto/ks.yaml
+++ b/kubernetes/utility/apps/home-automation/mosquitto/ks.yaml
@@ -12,6 +12,7 @@ spec:
     - ../../../../../shared/components/gatus/guarded
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/home-automation/mosquitto/app
   postBuild:
