--- a/kubernetes/utility/apps/home-automation/rtlamr2mqtt/ks.yaml
+++ b/kubernetes/utility/apps/home-automation/rtlamr2mqtt/ks.yaml
@@ -10,7 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
     - name: node-feature-discovery-features
+      namespace: kube-tools
   interval: 30m
   path: ./kubernetes/utility/apps/home-automation/rtlamr2mqtt/app
   prune: false # revert to true
