--- a/kubernetes/utility/apps/network/external/ks.yaml
+++ b/kubernetes/utility/apps/network/external/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/network/external/cloudflare-ddns
   prune: false # revert to true
@@ -32,7 +33,9 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-dns-cloudflare
+      namespace: network
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/network/external/cloudflared
   prune: false # revert to true
@@ -75,6 +78,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/network/external/external-dns
   prune: false # revert to true
@@ -97,6 +101,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager-tls
+      namespace: cert-manager
   interval: 30m
   path: ./kubernetes/utility/apps/network/external/ingress-nginx
   prune: false # revert to true
