--- a/kubernetes/utility/apps/observability/grafana/ks.yaml
+++ b/kubernetes/utility/apps/observability/grafana/ks.yaml
@@ -12,6 +12,7 @@ spec:
     - ../../../../../shared/components/gatus/external
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/observability/grafana/app
   postBuild:
