--- a/kubernetes/main/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/ks.yaml
@@ -30,6 +30,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/cert-manager/cert-manager/issuers
   prune: false # revert to true
@@ -52,7 +53,9 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager-issuers
+      namespace: cert-manager
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/cert-manager/cert-manager/tls
   prune: false # revert to true
