--- a/kubernetes/main/apps/downloads/bazarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/ks.yaml
@@ -13,8 +13,11 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: crunchy-postgres-cluster
+      namespace: database
     - name: crunchy-postgres-stores
+      namespace: database
     - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
   interval: 30m
   path: ./kubernetes/main/apps/downloads/bazarr/app
