--- a/kubernetes/main/apps/downloads/recyclarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/recyclarr/ks.yaml
@@ -12,8 +12,11 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: radarr
+      namespace: downloads
     - name: sonarr
+      namespace: downloads
     - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
   interval: 30m
   path: ./kubernetes/main/apps/downloads/recyclarr/app
