--- a/kubernetes/main/apps/external-secrets/onepassword/ks.yaml
+++ b/kubernetes/main/apps/external-secrets/onepassword/ks.yaml
@@ -30,6 +30,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/external-secrets/onepassword/stores
   prune: false # revert to true
