--- a/kubernetes/main/apps/kube-tools/node-feature-discovery/ks.yaml
+++ b/kubernetes/main/apps/kube-tools/node-feature-discovery/ks.yaml
@@ -30,6 +30,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: node-feature-discovery
+      namespace: kube-tools
   interval: 30m
   path: ./kubernetes/main/apps/kube-tools/node-feature-discovery/features
   prune: false # revert to true
