--- a/kubernetes/main/apps/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/main/apps/kube-tools/system-upgrade-controller/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: node-feature-discovery
+      namespace: kube-tools
   interval: 30m
   path: ./kubernetes/main/apps/kube-tools/system-upgrade-controller/app
   prune: false # revert to true
@@ -32,6 +33,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: system-upgrade-controller
+      namespace: kube-tools
   interval: 30m
   path: ./kubernetes/main/apps/kube-tools/system-upgrade-controller/plans
   postBuild:
