--- a/kubernetes/main/apps/media/jellyseerr/ks.yaml
+++ b/kubernetes/main/apps/media/jellyseerr/ks.yaml
@@ -13,7 +13,9 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/media/jellyseerr/app
   postBuild:
