--- a/kubernetes/main/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/main/apps/observability/kube-prometheus-stack/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/observability/kube-prometheus-stack/app
   prune: false # revert to true
