--- a/kubernetes/main/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/rook-ceph/rook-ceph/app
   prune: false # never should be deleted
