--- a/kubernetes/main/apps/security/authentik/ks.yaml
+++ b/kubernetes/main/apps/security/authentik/ks.yaml
@@ -12,9 +12,13 @@ spec:
     - ../../../../../shared/components/gatus/external
   dependsOn:
     - name: crunchy-postgres-cluster
+      namespace: database
     - name: crunchy-postgres-stores
+      namespace: database
     - name: dragonfly-cluster
+      namespace: database
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/security/authentik/app
   postBuild:
