--- a/kubernetes/main/apps/self-hosted/homepage/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/ks.yaml
@@ -12,6 +12,7 @@ spec:
     - ../../../../../shared/components/gatus/guarded
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/self-hosted/homepage/app
   postBuild:
