--- a/kubernetes/main/apps/self-hosted/paperless/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/ks.yaml
@@ -13,9 +13,13 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: crunchy-postgres-stores
+      namespace: database
     - name: dragonfly-cluster
+      namespace: database
     - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/self-hosted/paperless/app
   postBuild:
