--- a/kubernetes/utility/apps/flux-system/tofu-controller/ks.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/flux-system/tofu-controller/app
   prune: false # revert to true
@@ -32,6 +33,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: tofu-controller
+      namespace: flux-system
   interval: 30m
   path: ./kubernetes/utility/apps/flux-system/tofu-controller/terraform
   prune: false # revert to true
