--- a/kubernetes/utility/apps/home-automation/zigbee2mqtt/ks.yaml
+++ b/kubernetes/utility/apps/home-automation/zigbee2mqtt/ks.yaml
@@ -13,7 +13,9 @@ spec:
     - ../../../../../shared/components/volsync
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/utility/apps/home-automation/zigbee2mqtt/app
   postBuild:
