--- a/kubernetes/utility/apps/kube-system/cilium/ks.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/ks.yaml
@@ -30,6 +30,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cilium
+      namespace: kube-system
   interval: 30m
   path: ./kubernetes/utility/apps/kube-system/cilium/config
   prune: false # never should be deleted
