--- a/kubernetes/utility/apps/network/internal/ks.yaml
+++ b/kubernetes/utility/apps/network/internal/ks.yaml
@@ -11,6 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/network/internal/external-dns
   prune: false # revert to true
@@ -33,6 +34,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager-tls
+      namespace: cert-manager
   interval: 30m
   path: ./kubernetes/utility/apps/network/internal/ingress-nginx
   prune: false # revert to true
