--- a/kubernetes/utility/apps/self-hosted/free-game-notifier/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/free-game-notifier/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/self-hosted/free-game-notifier/app
   prune: false # revert to true
