--- a/kubernetes/utility/apps/storage/snapshot-controller/ks.yaml
+++ b/kubernetes/utility/apps/storage/snapshot-controller/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: local-path-provisioner
+      namespace: storage
   interval: 30m
   path: ./kubernetes/utility/apps/storage/snapshot-controller/app
   prune: false # revert to true
