--- a/kubernetes/main/apps/downloads/bazarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/ks.yaml
@@ -19,6 +19,7 @@ spec:
     - name: onepassword-store
       namespace: external-secrets
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/downloads/bazarr/app
   postBuild:
