--- a/kubernetes/main/apps/downloads/recyclarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/recyclarr/ks.yaml
@@ -18,6 +18,7 @@ spec:
     - name: onepassword-store
       namespace: external-secrets
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/downloads/recyclarr/app
   postBuild:
