--- a/kubernetes/main/apps/downloads/sabnzbd/ks.yaml
+++ b/kubernetes/main/apps/downloads/sabnzbd/ks.yaml
@@ -15,6 +15,7 @@ spec:
     - name: onepassword-store
       namespace: external-secrets
     - name: volsync
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/downloads/sabnzbd/app
   postBuild:
